--- a/20250730/ex6.html
+++ b/20250730/ex6.html
@@ -8,7 +8,8 @@
 <body>
     <script>
 let real = Number(prompt("Insira um valor em reais:"))
-let dolar = real / 5.58
+let cotação = Number(prompt("Insira a cotação do dólar:"))
+let dolar = real / cotação
 alert ("Sinto muito, mas R$" + real + " é equivalente a U$" + dolar)
     </script>
 </body>
